--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "plant-buddi-backend",
   "version": "1.0.0",
+  "engines": {
+    "node": "15.6.0"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
